--- a/calculate.html
+++ b/calculate.html
@@ -364,11 +364,11 @@
             <div class="charts_container">
                 <div class="chart_div chart_3d_div">
                     <div class="plotly_div"></div>
-                    <div class="param_form_div">
+                    <div class="form_div">
                         <form name="param_form" class="param_form">
                             <span class="axis_x_span">x:</span>
                             <span class="axis_y_span">y:</span>
-                            <span class="axis_y_span">z:</span>
+                            <span class="axis_z_span">z:</span>
                             <span class="add_chart span_button">+</span>
                         </form>
                     </div>
@@ -435,10 +435,8 @@
             <span class="delete_chart span_button">&#215;</span>
         </div>
         <select class="select_culture_template template" name="select_culture_template">
-            
         </select>
         <select class="select_field_template template" name="select_field_template">
-            
         </select>
         <select class="select_param_template template" name="select_param_template">
             <option value="" disabled>Параметр</option>
